adding second commit

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     function firstCommit(){
         console.log("first commit")
     }
+    function secondCommit(){
+        console.log("second commit")
+    }
         
     </script>
 
