--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     function secondCommit(){
         console.log("second commit")
     }
+    function ThirdCommitFromgitHub(){
+        console.log("commit from gitHub")
+    }
         
     </script>
 
