comment by "second branch"

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     function ThirdCommitFromgitHub(){
         console.log("commit from gitHub")
     }
+    function commentBysecondBranch(){
+        console.log("first comment by second bracnch")
+    }
         
     </script>
 
