commit from mastergithub

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     function ThirdCommitFromgitHub(){
         console.log("commit from gitHub")
     }
+     function byMasterBranc(){
+         console.log("commit from mastergithub")
+     }
+
         
     </script>
 
