unicorrn added function

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
      function byMasterBranc(){
          console.log("commit from mastergithub")
      }
+     function unicorn(){
+         console.log("unicorn functoin ")
+     }
 
         
     </script>
