second function by nnicorn

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
      function unicorn(){
          console.log("unicorn functoin ")
      }
+     function unicornsecond(){
+         console.log("unicorn second")
+     }
 
         
     </script>
